--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Start Font AweSome -->
-    <link rel="stylesheet" href="/CSS/all.css">
-    <link rel="stylesheet" href="/CSS/all.min.css">
+    <link rel="stylesheet" href="CSS/all.css">
+    <link rel="stylesheet" href="CSS/all.min.css">
     <!-- End Font AweSome -->
-    <link rel="stylesheet" href="/CSS/normalize.css">
-    <link rel="stylesheet" href="/CSS/animation.css">
-    <link rel="stylesheet" href="/CSS/elzero.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/animation.css">
+    <link rel="stylesheet" href="CSS/elzero.css">
 
     <!-- font Goggle -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
           <li>
             <a id="More" href="#More">More</a>
             <div class="mega_menu">
-              <img src="/IMG/mega-menu.svg">
+              <img src="IMG/mega-menu.svg">
               <ul>
                 <li><a href=""><i class="fas fa-comments"></i>Testmonials</a></li>
                 <li><a href=""><i class="fas fa-users"></i>Team member</a></li>
@@ -58,7 +58,7 @@
           <p>Its template 3 From Mr/Osama Elzero , and iam <span>Ahmed Shehata</span> and iam Training on it to improve my skills </p>
         </div>
         <div class="main-picture">
-          <img src="/IMG/landing-image.png" alt="landing-image.png">
+          <img src="IMG/landing-image.png" alt="landing-image.png">
         </div>
         <a href="#Article" class="arrow"><i class="fas fa-angle-double-down"></i></a>
       </div>
@@ -74,7 +74,7 @@
 
           <div class="content">
                 <div class="pic">
-                    <img src="/IMG/article01.jpg" alt="article01.jpg">
+                    <img src="IMG/article01.jpg" alt="article01.jpg">
                 </div>
                     <div class="text">
                         <h2>Technology</h2>
@@ -85,7 +85,7 @@
 
                   <div class="content">
                         <div class="pic">
-                            <img src="/IMG/article02.jpg" alt="article02.jpg">
+                            <img src="IMG/article02.jpg" alt="article02.jpg">
                         </div>
                             <div class="text">
                                 <h2>Technology</h2>
@@ -96,7 +96,7 @@
 
               <div class="content">
                     <div class="pic">
-                        <img src="/IMG/article03.jpg" alt="article03.jpg">
+                        <img src="IMG/article03.jpg" alt="article03.jpg">
                     </div>
                         <div class="text">
                             <h2>Technology</h2>
@@ -107,7 +107,7 @@
 
             <div class="content">
                 <div class="pic">
-                    <img src="/IMG/article04.jpg" alt="article04.jpg">
+                    <img src="IMG/article04.jpg" alt="article04.jpg">
                 </div>
                     <div class="text">
                         <h2>Technology</h2>
@@ -118,7 +118,7 @@
 
             <div class="content">
               <div class="pic">
-                  <img src="/IMG/article05.jpg" alt="article06.jpg">
+                  <img src="IMG/article05.jpg" alt="article06.jpg">
               </div>
                   <div class="text">
                       <h2>Technology</h2>
@@ -129,7 +129,7 @@
 
             <div class="content">
               <div class="pic">
-                  <img src="/IMG/article06.jpg" alt="article06.jpg">
+                  <img src="IMG/article06.jpg" alt="article06.jpg">
               </div>
                   <div class="text">
                       <h2>Technology</h2>
@@ -140,7 +140,7 @@
 
             <div class="content">
               <div class="pic">
-                  <img src="/IMG/article07.jpg" alt="article07.jpg">
+                  <img src="IMG/article07.jpg" alt="article07.jpg">
               </div>
                   <div class="text">
                       <h2>Technology</h2>
@@ -151,7 +151,7 @@
 
             <div class="content">
               <div class="pic">
-                  <img src="/IMG/article08.jpg" alt="article08.jpg">
+                  <img src="IMG/article08.jpg" alt="article08.jpg">
               </div>
                   <div class="text">
                       <h2>Technology</h2>
@@ -170,27 +170,27 @@
         </div>
       <div class="container">
           <div class="box">
-            <div class="pic-gallery"><img src="/IMG/gallery-01.png" alt="gallery-01.png"></div>
+            <div class="pic-gallery"><img src="IMG/gallery-01.png" alt="gallery-01.png"></div>
           </div>
 
           <div class="box">
-            <div class="pic-gallery"><img src="/IMG/gallery02.jpg" alt="gallery-02png"></div>
+            <div class="pic-gallery"><img src="IMG/gallery02.jpg" alt="gallery-02png"></div>
           </div>
 
           <div class="box">
-            <div class="pic-gallery"><img src="/IMG/gallery03.jpg" alt="gallery-03.png"></div>
+            <div class="pic-gallery"><img src="IMG/gallery03.jpg" alt="gallery-03.png"></div>
           </div>
 
           <div class="box">
-            <div class="pic-gallery"><img src="/IMG/gallery04.jpg" alt="gallery-04.png"></div>
+            <div class="pic-gallery"><img src="IMG/gallery04.jpg" alt="gallery-04.png"></div>
           </div>
 
           <div class="box">
-            <div class="pic-gallery"><img src="/IMG/gallery05.jpg" alt="gallery-05.png"></div>
+            <div class="pic-gallery"><img src="IMG/gallery05.jpg" alt="gallery-05.png"></div>
           </div>
 
           <div class="box">
-            <div class="pic-gallery"><img src="/IMG/gallery-06.png" alt="gallery-06.png"></div>
+            <div class="pic-gallery"><img src="IMG/gallery-06.png" alt="gallery-06.png"></div>
           </div>
       </div>
     </div>
@@ -202,7 +202,7 @@
         </div>
       <div class="container">
         <div class="feat-content quality">
-          <div class="imgbox"><img src="/IMG/feat03.jpg" alt=""></div>
+          <div class="imgbox"><img src="IMG/feat03.jpg" alt=""></div>
           <div class="caption-box">
             <h1>Quality</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente architecto mollitia blanditiis! Molestiae repudiandae iure nulla.</p>
@@ -211,7 +211,7 @@
         </div>
 
         <div class="feat-content love-code">
-          <div class="imgbox"><img src="/IMG/feat01.jpg" alt=""></div>
+          <div class="imgbox"><img src="IMG/feat01.jpg" alt=""></div>
           <div class="caption-box">
             <h1>Love Coding</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente architecto mollitia blanditiis! Molestiae repudiandae iure nulla.</p>
@@ -220,7 +220,7 @@
         </div>
 
         <div class="feat-content passion">
-          <div class="imgbox"><img src="/IMG/feat02.jpg" alt=""></div>
+          <div class="imgbox"><img src="IMG/feat02.jpg" alt=""></div>
           <div class="caption-box">
             <h1>Passion</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente architecto mollitia blanditiis! Molestiae repudiandae iure nulla.</p>
@@ -237,7 +237,7 @@
         </div>
       <div class="container">
           <div class="box-monials">
-            <div><img src="/IMG/avatar02.png" alt=""></div>
+            <div><img src="IMG/avatar02.png" alt=""></div>
             <h2 class="title">SomeBody</h2>
             <h4 class="carier">Full Stack Developer</h4>
             <div class="rate">
@@ -251,7 +251,7 @@
           </div>
 
           <div class="box-monials">
-            <div><img src="/IMG/Avatar01r.png" alt=""></div>
+            <div><img src="IMG/Avatar01r.png" alt=""></div>
             <h2 class="title">Ahmed Shehata</h2>
             <h4 class="carier">Full Stack Developer</h4>
             <div class="rate">
@@ -265,7 +265,7 @@
           </div>
           
           <div class="box-monials">
-            <div><img src="/IMG/avatar05.png" alt=""></div>
+            <div><img src="IMG/avatar05.png" alt=""></div>
             <h2 class="title">SomeBody</h2>
             <h4 class="carier">Full Stack Developer</h4>
             <div class="rate">
@@ -279,7 +279,7 @@
           </div>
 
           <div class="box-monials">
-            <div><img src="/IMG/avatar06.png" alt=""></div>
+            <div><img src="IMG/avatar06.png" alt=""></div>
             <h2 class="title">SomeBody</h2>
             <h4 class="carier">Full Stack Developer</h4>
             <div class="rate">
@@ -293,7 +293,7 @@
           </div>
 
           <div class="box-monials">
-            <div><img src="/IMG/avatar05.png" alt=""></div>
+            <div><img src="IMG/avatar05.png" alt=""></div>
             <h2 class="title">SomeBody</h2>
             <h4 class="carier">Full Stack Developer</h4>
             <div class="rate">
@@ -307,7 +307,7 @@
           </div>
 
           <div class="box-monials">
-            <div><img src="/IMG/avatar04.png" alt=""></div>
+            <div><img src="IMG/avatar04.png" alt=""></div>
             <h2 class="title">SomeBody</h2>
             <h4 class="carier">Full Stack Developer</h4>
             <div class="rate">
