--- a/index.html
+++ b/index.html
@@ -519,21 +519,21 @@
         <img class="main_sec_pic" src="img/How-It_works.svg" alt="">
         <div class="detal_boxs">
           <div class="box1">
-            <img src="img/how03.png" alt="">
+            <img src="IMG/how03.png" alt="">
             <div class="information">
               <h2>Knowlage</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex harum voluptatibus similique. Laborum, quidem dolores.</p>
             </div>
           </div>
           <div class="box1">
-            <img src="img/how2.png" alt="">
+            <img src="IMG/how2.png" alt="">
             <div class="information">
               <h2>Development</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex harum voluptatibus similique. Laborum, quidem dolores.</p>
             </div>
           </div>
           <div class="box1">
-            <img src="img/how01.png" alt="">
+            <img src="IMG/how01.png" alt="">
             <div class="information">
               <h2>Art</h2>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ex harum voluptatibus similique. Laborum, quidem dolores.</p>
@@ -691,7 +691,7 @@
               </div>
             </div>
             <div class="vid_preview">
-              <div class="vid"><img src="/IMG/top-videos.jpg" alt=""></div>
+              <div class="vid"><img src="IMG/top-videos.jpg" alt=""></div>
               <div class="title2"><h2>Everything About Domains</h2></div>
             </div>
 
