--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- End Font AweSome -->
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/animation.css">
-    <link rel="stylesheet" href="CSS/elzero.css">
+    <link rel="stylesheet" href="CSS/code-and-go.css">
 
     <!-- font Goggle -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -698,6 +698,96 @@
           </div>
     </div>
     <!-- End Top Videos -->
+    <!-- STart Stat -->
+    <div class="status" id="status">
+      <div class="stats_title">
+        <h1>Our Awesome Stats</h1>
+        </div>
+      <div class="container">
+        <div class="stat_box">
+          <i class="fas fa-user user_ico ico"></i>
+            <h2>13</h2>
+              <span>Clints</span>
+        </div>
+        <div class="stat_box">
+          <i class="fas fa-project-diagram proj_ico ico"></i>
+            <h2>22</h2>
+              <span>Projects</span>
+        </div>
+        <div class="stat_box">
+          <i class="fas fa-globe-africa earth_ico ico"></i>
+            <h2>4</h2>
+              <span>Countries</span>
+        </div>
+        <div class="stat_box">
+          <i class="fas fa-hand-holding-usd mony_ico ico"></i>
+            <h2>324</h2>
+              <span>Mony</span>
+        </div>
+      </div>
+    </div>
+    <!-- End Stat -->
+    <!-- start discount -->
+    <div class="discount" id="discount">
+      <div class="discount_info">
+        <h1>We Have A Discount</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam eos laborum placeat temporibus atque. Dolores est doloribus repudiandae libero sunt labore optio natus ea officiis assumenda modi accusamus, illum nemo, voluptas voluptatibus consequatur cum, quaerat rem ut nam. Tenetur sequi aut ipsam odio illo laborum? Atque nulla quidem commodi magni!</p>
+        <div class="discount_img">
+          <img src="IMG/discount.svg">
+        </div>
+      </div>
+        <div class="discount_form">
+          <h1>Request A Discount</h1>
+          <form action="">
+            <input type="text" placeholder="User name" >
+            <input type="email" placeholder="Email Address" >
+            <input type="number" placeholder="Your Phone Number" >
+            <textarea cols="30" rows="10" placeholder="Write Your Messeage"></textarea>
+            <input type="submit" value="Send">
+          </form>
+        </div>
+    </div>
+    <!-- End discount -->
+    <!-- footer -->
+    <footer>
+      <div class="container">
+        <div class="foot_box">
+          <h1>Code&Go</h1>
+          <div class="foot_ico">
+            <i class="fab fa-facebook-f facebook_ico"></i>
+            <i class="fab fa-github Git_ico"></i>
+            <i class="fab fa-twitter Twitter_ico"></i>
+            <i class="fas fa-donate donat_ico"></i>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos magnam autem cupiditate possimus, nobis laudantium deleniti!</p>
+        </div>
+
+        <div class="links_box">
+          <ul>
+            <li><a href="#gallery"><i class="fas fa-angle-double-right"></i> Gallery </a></li>
+            <li><a href="Feature"><i class="fas fa-angle-double-right"></i> Features </a></li>
+            <li><a href="#team_member"><i class="fas fa-angle-double-right"></i> Team Members </a></li>
+            <li><a href="#our_skills"><i class="fas fa-angle-double-right"></i> Our Skills </a></li>
+          </ul>
+        </div>
+
+        <div class="information_box">
+          <h3><i class="fas fa-map-marker-alt foot_info_ico"></i> Egypt , Alexsandria ,Elhadara ElGededa</h3>
+          <h3><i class="far fa-clock foot_info_ico"></i>Businiess Hours: From 10:00 AM To 19:00 PM</h3>
+          <h3><i class="fas fa-phone-volume foot_info_ico"></i>+201000000000</h3>
+        </div>
+
+        <div class="gallery_boxs">
+          <img src="IMG/gallery-01.png" alt="">
+          <img src="IMG/gallery04.jpg" alt="">
+          <img src="IMG/gallery03.jpg" alt="">
+          <img src="IMG/gallery04.jpg" alt="">
+          <img src="IMG/gallery05.jpg" alt="">
+          <img src="IMG/gallery-06.png" alt="">
+        </div>
+      </div>
+    </footer>
+    <!-- end footer -->
     <script src="/js/main.js"></script>
   </body>
 </html>
